# starq-lib

./: CMakeLists.txt  Dockerfile  README.md  run_dev.sh
cmake/: starqConfig.cmake.in  starqLibConfig.cmake.in  starqSdkConfig.cmake.in
include/starq/: gait_controller.hpp  leg_command_publisher.hpp  leg_controller.hpp  leg_dynamics.hpp  motor_controller.hpp  thread_runner.hpp  trajectory_file_reader.hpp  trajectory_publisher.hpp
include/starq/can/: socket.hpp
include/starq/controllers/: gait_controller.hpp  leg_controller.hpp  motor_controller.hpp  robot_controller.hpp
include/starq/dynamics/: leg_controller.hpp  leg_dynamics.hpp  starq_fivebar2d.hpp  starq_rrr.hpp
include/starq/mpc/: body_control_mpc.hpp  gait_sequence.hpp  gait_sequencer.hpp  mpc_planner.hpp  mpc_types.hpp
include/starq/odrive/: can_driver.hpp  can_listener.hpp  controller.hpp  driver.hpp  listener.hpp  odrive_controller.hpp  odrive_socket.hpp
include/starq/publishers/: leg_command_publisher.hpp
include/starq/slam/: localization.hpp  terrain_map.hpp
include/starq/testing/: dummy_motor_controller.hpp
include/starq/trajectories/: trajectory_file_reader.hpp
include/starq/walking/: walking_gait_controller.hpp  walking_gait_planner.hpp  walking_types.hpp
matlab/: FiveBar2D_dynamics.asv  FiveBar2D_dynamics.m  generate_square_trajectory.m  mpc_setup.asv  symbolic_dynamics.m
src/: leg_command_publisher.cpp  leg_controller.cpp  trajectory_file_reader.cpp  trajectory_publisher.cpp
src/can/: socket.cpp
src/controllers/: leg_controller.cpp
src/dynamics/: starq_fiverbar2d.cpp
src/odrive/: can_driver.cpp  can_listener.cpp  driver.cpp  listener.cpp  odrive_controller.cpp  odrive_socket.cpp
src/publishers/: leg_command_publisher.cpp
src/trajectories/: trajectory_file_reader.cpp
src/walking/: walking_gait_controller.cpp
tests/: test_can.cpp  test_clear_errors.cpp  test_command_publisher_dummy.cpp  test_fivebar2d_dummy.cpp  test_fivebar2d_force_control.cpp  test_fivebar2d_position_control.cpp  test_leg_dynamics.cpp  test_odrive.cpp  test_odrive_control.cpp
